syntax.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 $@1: %empty

    5 ExtDefList: Specifier $@1 ExtDefList

    6 $@2: %empty

    7 ExtDefList: Specifier ExtDecList $@2 ExtDefList

    8 ExtDef: Specifier ExtDecList SEMI
    9       | Specifier SEMI
   10       | Specifier FunDec CompSt
   11       | error SEMI

   12 ExtDecList: VarDec
   13           | VarDec COMMA ExtDecList

   14 Specifier: TYPE
   15          | StructSpecifier

   16 StructSpecifier: STRUCT OptTag LC DefList RC
   17                | STRUCT Tag

   18 OptTag: ID
   19       | %empty

   20 Tag: ID

   21 VarDec: ID
   22       | VarDec LB INT RB

   23 FunDec: ID LP VarList RP
   24       | ID LP RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC

   29 StmtList: Stmt StmtList
   30         | %empty

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | error SEMI

   38 DefList: Def DefList
   39        | %empty

   40 Def: Specifier DecList SEMI

   41 $@3: %empty

   42 Def: Specifier error $@3 SEMI

   43 DecList: Dec
   44        | Dec COMMA DecList

   45 Dec: VarDec
   46    | VarDec ASSIGNOP Exp

   47 Exp: Exp ASSIGNOP Exp
   48    | Exp AND Exp
   49    | Exp OR Exp
   50    | Exp RELOP Exp
   51    | Exp PLUS Exp
   52    | Exp MINUS Exp
   53    | Exp STAR Exp
   54    | Exp DIV Exp
   55    | LP Exp RP
   56    | MINUS Exp
   57    | NOT Exp
   58    | ID LP Args RP
   59    | ID LP RP
   60    | Exp LB Exp RB
   61    | Exp DOT ID
   62    | ID
   63    | INT
   64    | FLOAT
   65    | LP error RP

   66 Args: Exp COMMA Args
   67     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 11 37 42 65
INT (258) 22 63
FLOAT (259) 64
ID (260) 18 20 21 23 24 58 59 61 62
SEMI (261) 8 9 11 31 33 37 40 42
COMMA (262) 13 25 44 66
ASSIGNOP (263) 46 47
RELOP (264) 50
PLUS (265) 51
MINUS (266) 52 56
STAR (267) 53
DIV (268) 54
AND (269) 48
OR (270) 49
DOT (271) 61
NOT (272) 57
TYPE (273) 14
LP (274) 23 24 34 35 36 55 58 59 65
RP (275) 23 24 34 35 36 55 58 59 65
LB (276) 22 60
RB (277) 22 60
LC (278) 16 28
RC (279) 16 28
STRUCT (280) 16 17
RETURN (281) 33
IF (282) 34 35
ELSE (283) 35
WHILE (284) 36
ERROR (285)
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3 5 7, on right: 1 2 5 7
$@1 (35)
    on left: 4, on right: 5
$@2 (36)
    on left: 6, on right: 7
ExtDef (37)
    on left: 8 9 10 11, on right: 2
ExtDecList (38)
    on left: 12 13, on right: 7 8 13
Specifier (39)
    on left: 14 15, on right: 5 7 8 9 10 27 40 42
StructSpecifier (40)
    on left: 16 17, on right: 15
OptTag (41)
    on left: 18 19, on right: 16
Tag (42)
    on left: 20, on right: 17
VarDec (43)
    on left: 21 22, on right: 12 13 22 27 45 46
FunDec (44)
    on left: 23 24, on right: 10
VarList (45)
    on left: 25 26, on right: 23 25
ParamDec (46)
    on left: 27, on right: 25 26
CompSt (47)
    on left: 28, on right: 10 32
StmtList (48)
    on left: 29 30, on right: 28 29
Stmt (49)
    on left: 31 32 33 34 35 36 37, on right: 29 34 35 36
DefList (50)
    on left: 38 39, on right: 16 28 38
Def (51)
    on left: 40 42, on right: 38
$@3 (52)
    on left: 41, on right: 42
DecList (53)
    on left: 43 44, on right: 40 44
Dec (54)
    on left: 45 46, on right: 43 44
Exp (55)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65, on right: 31 33 34 35 36 46 47 48 49 50 51 52 53 54 55 56 57
    60 61 66 67
Args (56)
    on left: 66 67, on right: 58 66


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

   11 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   14 Specifier: TYPE .

    $default  reduce using rule 14 (Specifier)


State 3

   16 StructSpecifier: STRUCT . OptTag LC DefList RC
   17                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 19 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    5 ExtDefList: Specifier . $@1 ExtDefList
    7           | Specifier . ExtDecList $@2 ExtDefList
    8 ExtDef: Specifier . ExtDecList SEMI
    9       | Specifier . SEMI
   10       | Specifier . FunDec CompSt

    ID    shift, and go to state 15
    SEMI  shift, and go to state 16

    $default  reduce using rule 4 ($@1)

    $@1         go to state 17
    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   15 Specifier: StructSpecifier .

    $default  reduce using rule 15 (Specifier)


State 9

   11 ExtDef: error SEMI .

    $default  reduce using rule 11 (ExtDef)


State 10

   18 OptTag: ID .
   20 Tag: ID .

    LC        reduce using rule 18 (OptTag)
    $default  reduce using rule 20 (Tag)


State 11

   16 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   17 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 17 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   21 VarDec: ID .
   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP

    LP  shift, and go to state 22

    $default  reduce using rule 21 (VarDec)


State 16

    9 ExtDef: Specifier SEMI .

    $default  reduce using rule 9 (ExtDef)


State 17

    5 ExtDefList: Specifier $@1 . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 23
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 18

    7 ExtDefList: Specifier ExtDecList . $@2 ExtDefList
    8 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24

    $default  reduce using rule 6 ($@2)

    $@2  go to state 25


State 19

   12 ExtDecList: VarDec .
   13           | VarDec . COMMA ExtDecList
   22 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 26
    LB     shift, and go to state 27

    $default  reduce using rule 12 (ExtDecList)


State 20

   10 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 28

    CompSt  go to state 29


State 21

   16 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 31
    Def              go to state 32


State 22

   23 FunDec: ID LP . VarList RP
   24       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


State 23

    5 ExtDefList: Specifier $@1 ExtDefList .

    $default  reduce using rule 5 (ExtDefList)


State 24

    8 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 8 (ExtDef)


State 25

    7 ExtDefList: Specifier ExtDecList $@2 . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 37
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 26

   13 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 19


State 27

   22 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 40


State 28

   28 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 41
    Def              go to state 32


State 29

   10 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 10 (ExtDef)


State 30

   40 Def: Specifier . DecList SEMI
   42    | Specifier . error $@3 SEMI

    error  shift, and go to state 42
    ID     shift, and go to state 38

    VarDec   go to state 43
    DecList  go to state 44
    Dec      go to state 45


State 31

   16 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 46


State 32

   38 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 32


State 33

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


State 34

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 38

    VarDec  go to state 48


State 35

   23 FunDec: ID LP VarList . RP

    RP  shift, and go to state 49


State 36

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 50

    $default  reduce using rule 26 (VarList)


State 37

    7 ExtDefList: Specifier ExtDecList $@2 ExtDefList .

    $default  reduce using rule 7 (ExtDefList)


State 38

   21 VarDec: ID .

    $default  reduce using rule 21 (VarDec)


State 39

   13 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 13 (ExtDecList)


State 40

   22 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 51


State 41

   28 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 52
    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    ID      shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 28
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 63
    Stmt      go to state 64
    Exp       go to state 65


State 42

   42 Def: Specifier error . $@3 SEMI

    $default  reduce using rule 41 ($@3)

    $@3  go to state 66


State 43

   22 VarDec: VarDec . LB INT RB
   45 Dec: VarDec .
   46    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 67
    LB        shift, and go to state 27

    $default  reduce using rule 45 (Dec)


State 44

   40 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 68


State 45

   43 DecList: Dec .
   44        | Dec . COMMA DecList

    COMMA  shift, and go to state 69

    $default  reduce using rule 43 (DecList)


State 46

   16 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 16 (StructSpecifier)


State 47

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 48

   22 VarDec: VarDec . LB INT RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 27

    $default  reduce using rule 27 (ParamDec)


State 49

   23 FunDec: ID LP VarList RP .

    $default  reduce using rule 23 (FunDec)


State 50

   25 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 70
    ParamDec         go to state 36


State 51

   22 VarDec: VarDec LB INT RB .

    $default  reduce using rule 22 (VarDec)


State 52

   37 Stmt: error . SEMI

    SEMI  shift, and go to state 71


State 53

   63 Exp: INT .

    $default  reduce using rule 63 (Exp)


State 54

   64 Exp: FLOAT .

    $default  reduce using rule 64 (Exp)


State 55

   58 Exp: ID . LP Args RP
   59    | ID . LP RP
   62    | ID .

    LP  shift, and go to state 72

    $default  reduce using rule 62 (Exp)


State 56

   56 Exp: MINUS . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 73


State 57

   57 Exp: NOT . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 74


State 58

   55 Exp: LP . Exp RP
   65    | LP . error RP

    error  shift, and go to state 75
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 76


State 59

   33 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 77


State 60

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 78


State 61

   36 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 79


State 62

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


State 63

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 80


State 64

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 52
    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    ID      shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 28
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 81
    Stmt      go to state 64
    Exp       go to state 65


State 65

   31 Stmt: Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    SEMI      shift, and go to state 82
    ASSIGNOP  shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    LB        shift, and go to state 92


State 66

   42 Def: Specifier error $@3 . SEMI

    SEMI  shift, and go to state 93


State 67

   46 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 94


State 68

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


State 69

   44 DecList: Dec COMMA . DecList

    ID  shift, and go to state 38

    VarDec   go to state 43
    DecList  go to state 95
    Dec      go to state 45


State 70

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


State 71

   37 Stmt: error SEMI .

    $default  reduce using rule 37 (Stmt)


State 72

   58 Exp: ID LP . Args RP
   59    | ID LP . RP

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    RP     shift, and go to state 96

    Exp   go to state 97
    Args  go to state 98


State 73

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   56    | MINUS Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    STAR  shift, and go to state 87
    DIV   shift, and go to state 88
    DOT   shift, and go to state 91
    LB    shift, and go to state 92

    $default  reduce using rule 56 (Exp)


State 74

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   57    | NOT Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    DOT  shift, and go to state 91
    LB   shift, and go to state 92

    $default  reduce using rule 57 (Exp)


State 75

   65 Exp: LP error . RP

    RP  shift, and go to state 99


State 76

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   55    | LP Exp . RP
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    RP        shift, and go to state 100
    LB        shift, and go to state 92


State 77

   33 Stmt: RETURN Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    SEMI      shift, and go to state 101
    ASSIGNOP  shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    LB        shift, and go to state 92


State 78

   34 Stmt: IF LP . Exp RP Stmt
   35     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 102


State 79

   36 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 103


State 80

   28 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 28 (CompSt)


State 81

   29 StmtList: Stmt StmtList .

    $default  reduce using rule 29 (StmtList)


State 82

   31 Stmt: Exp SEMI .

    $default  reduce using rule 31 (Stmt)


State 83

   47 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 104


State 84

   50 Exp: Exp RELOP . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 105


State 85

   51 Exp: Exp PLUS . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 106


State 86

   52 Exp: Exp MINUS . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 107


State 87

   53 Exp: Exp STAR . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 108


State 88

   54 Exp: Exp DIV . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 109


State 89

   48 Exp: Exp AND . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 110


State 90

   49 Exp: Exp OR . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 111


State 91

   61 Exp: Exp DOT . ID

    ID  shift, and go to state 112


State 92

   60 Exp: Exp LB . Exp RB

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 113


State 93

   42 Def: Specifier error $@3 SEMI .

    $default  reduce using rule 42 (Def)


State 94

   46 Dec: VarDec ASSIGNOP Exp .
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    LB        shift, and go to state 92

    $default  reduce using rule 46 (Dec)


State 95

   44 DecList: Dec COMMA DecList .

    $default  reduce using rule 44 (DecList)


State 96

   59 Exp: ID LP RP .

    $default  reduce using rule 59 (Exp)


State 97

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66 Args: Exp . COMMA Args
   67     | Exp .

    COMMA     shift, and go to state 114
    ASSIGNOP  shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    LB        shift, and go to state 92

    $default  reduce using rule 67 (Args)


State 98

   58 Exp: ID LP Args . RP

    RP  shift, and go to state 115


State 99

   65 Exp: LP error RP .

    $default  reduce using rule 65 (Exp)


State 100

   55 Exp: LP Exp RP .

    $default  reduce using rule 55 (Exp)


State 101

   33 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 33 (Stmt)


State 102

   34 Stmt: IF LP Exp . RP Stmt
   35     | IF LP Exp . RP Stmt ELSE Stmt
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    RP        shift, and go to state 116
    LB        shift, and go to state 92


State 103

   36 Stmt: WHILE LP Exp . RP Stmt
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    RP        shift, and go to state 117
    LB        shift, and go to state 92


State 104

   47 Exp: Exp . ASSIGNOP Exp
   47    | Exp ASSIGNOP Exp .
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    LB        shift, and go to state 92

    $default  reduce using rule 47 (Exp)


State 105

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   50    | Exp RELOP Exp .
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    PLUS   shift, and go to state 85
    MINUS  shift, and go to state 86
    STAR   shift, and go to state 87
    DIV    shift, and go to state 88
    DOT    shift, and go to state 91
    LB     shift, and go to state 92

    $default  reduce using rule 50 (Exp)


State 106

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   51    | Exp PLUS Exp .
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    STAR  shift, and go to state 87
    DIV   shift, and go to state 88
    DOT   shift, and go to state 91
    LB    shift, and go to state 92

    $default  reduce using rule 51 (Exp)


State 107

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   52    | Exp MINUS Exp .
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    STAR  shift, and go to state 87
    DIV   shift, and go to state 88
    DOT   shift, and go to state 91
    LB    shift, and go to state 92

    $default  reduce using rule 52 (Exp)


State 108

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   53    | Exp STAR Exp .
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    DOT  shift, and go to state 91
    LB   shift, and go to state 92

    $default  reduce using rule 53 (Exp)


State 109

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   54    | Exp DIV Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    DOT  shift, and go to state 91
    LB   shift, and go to state 92

    $default  reduce using rule 54 (Exp)


State 110

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   48    | Exp AND Exp .
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    RELOP  shift, and go to state 84
    PLUS   shift, and go to state 85
    MINUS  shift, and go to state 86
    STAR   shift, and go to state 87
    DIV    shift, and go to state 88
    DOT    shift, and go to state 91
    LB     shift, and go to state 92

    $default  reduce using rule 48 (Exp)


State 111

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   49    | Exp OR Exp .
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
